16546
Just a minor annoyance:
```scala
<console>:1: error: '=' expected but ';' found.
       val var = 6;
                  ^
```

I think the error message should be about the var, like it does with:
```scala
scala> val var = 6
<console>:1: error: illegal start of simple pattern
       val var = 6
           ^
```

or (when following the advice of the first error message):
```scala
scala> val var = 6 =
<console>:1: error: illegal start of simple pattern
       val var = 6 =
           ^
```
